--- a/flex/style.css
+++ b/flex/style.css
@@ -136,6 +136,7 @@ img {
   background-color: rgb(255, 255, 255);
   align-items: center;
   transition: all 0.3s ease-in-out;
+  border-radius: 10px;
 }
 .uk-flex:hover {
   transform: scale(1.1);
@@ -146,7 +147,7 @@ img {
 }
 
 h2 {
-  font-family: lobster, cursive;
+  font-family: Rakkas, cursive;
 }
 .banner-content {
   background-color: rgba(0 0 0 / 30%);
@@ -181,6 +182,12 @@ a {
   color: rgb(172, 98, 45);
   font-family: "Permanent Marker";
   border-radius: 70px;
+  transition: all 0.24s ease-in-out;
+}
+.btn1:hover {
+  transform: scale(1.05);
+  font-family: "Permanent Marker";
+
 }
 
 .card:hover {
@@ -189,10 +196,12 @@ a {
   -moz-box-shadow: 11px -7px 34px 16px rgba(0, 0, 0, 0.7);
   transition: 0.4s;
 }
-
+.card .card-body {
+  text-align: center;
+}
 .card .img-fluid {
   max-height: 150px;
-  display: block;
+  display: inline-block;
   transition: all 0.3s ease-in-out;
   margin-bottom: 40px;
 }
@@ -203,3 +212,46 @@ a {
 .form-control {
   border-radius: 10px;
 }
+
+h4 {
+  color: rgba(255, 255, 255, 0.708);
+  font-family: "Lobster", cursive;
+  line-height: 170%;
+}
+
+h4 span {
+  font-family: "Rakkas", cursive;
+}
+
+footer {
+  color: white;
+  padding: 5%;
+  font-size: 25px;
+  text-align: center;
+}
+
+.footerico {
+  max-width: 70px;
+}
+
+.fa-brands {
+  transition: all 0.24s ease-in-out;
+  padding: 5px;
+}
+
+.fa-brands:hover {
+  transform: scale(1.08);
+}
+
+.nav-item {
+  transition: all 0.24s ease-in-out;
+}
+
+.nav-item:hover {
+  transform: scale(1.08);
+}
+
+h4 span {
+  font-family: "Rakkas", cursive;
+}
+
